--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
-{ 
+{
+  "name": "advNode",
+  "title": "advNode",
+  "description": "advNode dependencies",
+  "license": "MIT", 
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/markwy1/advNode.git"
+  },
   "devDependencies": { 
     "jasmine-node": ""
   }
